--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "metalworks01",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://metalworks.club",
   "dependencies": {
    
     "axios": "^1.3.2",
