--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "metalworks01",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://metalworks.club",
+  "homepage": "https://metalworks.club",
   "dependencies": {
-   
     "axios": "^1.3.2",
     "materialize-css": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
